Bug 1394927 - Use profiler_add_marker vs. profiler_tracing for accessibility profile events tags. r=aklotz

MozReview-Commit-ID: 9oJcPtdodrU